syntax = "proto3";

package com.distributedsystems.distributedcache.controller;

message ReadRequest {
  string key = 1;
  int64 lamportClock = 2;
}

message WriteRequest {
  string key = 1;
  string value = 2;
  int64 lamportClock = 3;
}

message ReadResponse {
  string value = 1;
  string lamportClock = 2;
  bool success = 3;
}

message WriteResponse {
  bool success = 1;
}

service ControllerService{

  rpc get(ReadRequest) returns(ReadRequest) {};
  rpc put(WriteRequest) returns(WriteResponse) {};

}